objects/ortoo_qra__Matching_Rules__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipLabel>Matching Rules</relationshipLabel>
        <relationshipName>Matching_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Active_Records_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Records Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Match_Field__c</fullName>
        <label>Follow Me Match Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_This_Distribution_Group_only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>This Distribution Group only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Time_Unit__c</fullName>
        <label>Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Units_Of_Time__c</fullName>
        <label>Units Of Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Update_Field__c</fullName>
        <label>Update Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Update_Value__c</fullName>
        <label>Update Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Ignore_Cap__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Ignore_Quota__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Match_Field__c</fullName>
        <label>Match Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Field_For_Lookup_Object__c</fullName>
        <label>Member Lookup Field For Lookup Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Match_Field__c</fullName>
        <label>Member_Lookup_Match_Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Match_Object__c</fullName>
        <label>Member Lookup Match Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Object__c</fullName>
        <label>Member Lookup Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_User_Match_Field__c</fullName>
        <label>Member Lookup_User_Match_Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Processing_Order__c</fullName>
        <label>Processing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Me</fullName>
                </value>
                <value>
                    <fullName>Member Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Matching Rules</label>
    <nameField>
        <label>Matching Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>